[package]
name = "crunner"
version = "0.1.0"
edition = "2021"
authors = ["Wasin Thonkaew <wasin@wasin.io>"]
description = "Runner/Executor CLI interacting with the target smart contract on EVM-based chains"
repository = "https://github.com/haxpor/crunner"
license = "MIT"
keywords = ["evm", "crypto", "runner", "smart-contract", "executor"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
web3 = "0.18.0"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
hex = "0.4.3"
regex = "1.5.5"
secp256k1 = "0.21.3"
ethabi = "16.0.0"
primitive-types = { version = "0.11.1", features = ["impl-serde", "fp-conversion"] }
